src/test/ui/reachable/expr_box.stderr
error: unreachable expression
  --> $DIR/expr_box.rs:6:13
   |
LL |     let x = box return;
   |             ^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_box.rs:3:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
note: any code following this expression is unreachable
  --> $DIR/expr_box.rs:6:17
   |
LL |     let x = box return;
   |                 ^^^^^^

error: aborting due to previous error

